--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nathan Rico - Front-End Expert</title>
+    <meta
+      name="description"
+      content="Welcome to the portfolio of Nathan Rico, a dynamic front-end developer based in Medellín, Colombia. With expertise in React, Redux, and Next.js, I offer innovative solutions for web development projects. Explore my skills and experience!"
+    />
+    <meta property="og:site_name" content="Nathan Rico - Front-End Expert" />
+    <meta property="og:title" content="Nathan Rico - Front-End Expert" />
+    <meta
+      property="og:description"
+      content="Welcome to the portfolio of Nathan Rico, a dynamic front-end developer based in Medellín, Colombia. With expertise in React, Redux, and Next.js, I offer innovative solutions for web development projects. Explore my skills and experience!"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://nathanredblur.github.io/photo.jpeg"
+    />
   </head>
   <body>
     <div id="root"></div>
