--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       property="og:image"
       content="https://nathanredblur.github.io/photo.jpeg"
     />
+    <meta name="author" content="Jonathan Rico" />
   </head>
   <body>
     <div id="root"></div>
