Fixing more meta data descriptions

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <title>Nathan Rico - Front-End Expert</title>
     <meta
       name="description"
-      content="Welcome to the portfolio of Nathan Rico, a dynamic front-end developer based in Medellín, Colombia. With expertise in React, Redux, and Next.js, I offer innovative solutions for web development projects. Explore my skills and experience!"
+      content="Front-end developer | React Specialist | Offering innovative solutions. Let's shape the future together. Explore my skills and experience!"
     />
     <meta property="og:site_name" content="Nathan Rico - Front-End Expert" />
     <meta property="og:title" content="Nathan Rico - Front-End Expert" />
     <meta
       property="og:description"
-      content="Welcome to the portfolio of Nathan Rico, a dynamic front-end developer based in Medellín, Colombia. With expertise in React, Redux, and Next.js, I offer innovative solutions for web development projects. Explore my skills and experience!"
+      content="Front-end developer | React Specialist | Offering innovative solutions. Let's shape the future together. Explore my skills and experience!"
     />
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://nathanredblur.github.io/photo.jpeg"
+      content="https://nathanredblur.github.io/og_image.png"
     />
     <meta name="author" content="Jonathan Rico" />
   </head>
