fix twitter meta tags

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       content="https://nathanredblur.github.io/og_image.png"
     />
     <meta name="author" content="Jonathan Rico" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@nathanredblur" />
   </head>
   <body>
     <div id="root"></div>
