--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://nathanredblur.github.io/og_image.png"
+      content="https://nathanredblur.dev/og_image.png"
     />
     <meta name="author" content="Jonathan Rico" />
     <meta name="twitter:card" content="summary_large_image" />
